# serial_port_monitor

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  fancy_cui.c  serial_util.h
src/: fancy_cui.c  serial_util.c  serial_util.h
